# mdsn

./: AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  install.ps1  install.sh  mise.toml
.claude/skills/creating-issue/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/resolving-issue/: SKILL.md
.cspell/dicts/: project.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: default.md
.github/workflows/: check-rust.yml  release.yml
docs/: PATTERNS.md  SPEC.md  TESTING.md  VALIDATION.md  spec.md
examples/: invalid.md  valid.md
mise/tasks/: release
src/: checker.rs  extractor.rs  fixer.rs  main.rs  self_update.rs
