[package]
name = "mdsn"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
self_update = { version = "0.44", default-features = false, features = [
    "reqwest",
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "rustls",
] }
